--- a/移动Web/案例-WJS/css/index.css
+++ b/移动Web/案例-WJS/css/index.css
@@ -123,6 +123,7 @@ ul {
 .wjs_nav .navbar-toggle {
   margin-top: 23px;
 }
+
 /* pc 轮播图样式, 定高, 图片居中, 只在大于640的屏幕中生效  */
 @media screen and (min-width: 641px) {
   .carousel .item {
@@ -137,4 +138,30 @@ ul {
     left: 50%;
     transform: translateX(-50%);
   }
+}
+
+/* 信息模块 */
+.wjs_info {
+  padding: 30px 0;
+  border-bottom: 1px solid #ccc;
+}
+.wjs_info .wjs_icon_info {
+  font-size: 30px;
+}
+.wjs_info .media {
+  display: block;
+  padding: 10px 0;
+}
+
+/* 预定模块 */
+.wjs_book {
+  padding: 30px 0;
+  border-bottom: 1px solid #ccc;
+}
+.wjs_book .wjs_icon {
+  font-size: 20px;
+}
+.wjs_book .book_now {
+  color: #e92322;
+  border-bottom: 1px dashed #e92322;
 }
